feat: swagger api docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -164,6 +164,8 @@ tempfile = "3.20.0"
 lazy_static = "1.4.0"
 prost = "0.13.1"
 dashmap = "6.1.0"
+utoipa = "5.4.0"
+utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
 
 [build-dependencies]
 cargo_toml = "0.21"
